Edit index & css

--- a/style.css
+++ b/style.css
@@ -1,9 +1,229 @@
+@import url('https://css.gg/search.css');
+@import url('https://css.gg/notifications.css');
+@import url('https://css.gg/profile.css');
+@import url('https://css.gg/tab.css');
+@import url('https://css.gg/eye.css');
+@import url('https://css.gg/software-download.css');
 
-
-.sidebar-nav {
-    background-color: aqua;
+* {
+    margin: 0;
+    padding: 0;
 }
 
+:root {
+    font-family: sans-serif;
+    --white: #fafaf9;
+    --grey: #e7e5e4;
+    --shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    grid-template-areas: "sidebar-nav header"
+    "sidebar-nav content" ;
+}
+
+/* End of Container */
+.sidebar-nav {
+    background-color: lightblue;
+    grid-area: sidebar-nav;
+    padding: 3rem;
+}
+
+.logo {
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--white);
+    padding-bottom: 3rem;
+}
+
+.menu {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--white);
+    display: grid;
+    gap: 3rem;
+}
+
+.menu ul,
+.menu li {
+    list-style-type: none;
+}
+
+.nav {
+    display: grid;
+    gap: 1rem;
+}
+
+/* End of Sidebar Nav */
 .header {
+    grid-area: header;
+    padding: 2rem;
+    padding-left: 4rem;
     background-color: bisque;
+}
+
+.top {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 1rem;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.search > #search {
+    width: 600px;
+    height: 2rem;
+    border-radius: 25px;
+    border: 0;
+}
+
+.account {
+    display: flex;
+    font-size: 1.2rem;
+    font-weight: 600;
+    justify-content: flex-end;
+    padding-right: 4rem;
+    align-items: center;
+    gap: 1.2rem;
+}
+
+button {
+    border: 0;
+    padding-right: .5rem;
+    background-color: bisque;
+}
+
+.bottom {
+    padding-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.greetings {
+    font-weight: bold;
+    padding-bottom: 8px;
+}
+
+.username {
+    font-size: 1.75rem;
+    font-weight: bold;
+}
+
+.buttons {
+    display: flex;
+    justify-content: end;
+    gap: 2rem;
+}
+
+.buttons .btn {
+    width: 7rem;
+    height: 2.5rem;
+    border: 2px solid lightblue;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+/* End of Header */
+.content {
+    background-color: var(--white);
+    padding: 1.75rem;
+    gap: 1rem;
+    display: grid;
+    grid-area: content;
+    grid-template-areas: 
+    "project announcement"
+    "project trending";
+    /* grid-template-columns: repeat(2, 1fr);
+    grid-template-rows:  repeat(2, 1fr); */
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows:  repeat(2, 1fr);
+    overflow: auto;
+}
+
+.project {
+    grid-area: project;
+}
+
+
+.project .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 200px;
+    border-radius: 10px;
+    gap: 2rem;
+}
+
+.actions {
+    display: flex;
+    margin-top: auto;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+h3 {
+    padding-bottom: 1.2rem;
+}
+
+ul {
+    list-style: none;
+}
+
+.project .card {
+    display: flex;
+    border-left: lightblue;
+    border-radius: 10px;
+    border-left-width: 10px;
+    border-left-style: solid;
+    flex-direction: column;
+    padding: 1.2rem;
+    background-color: #FFFFFF;
+}
+
+.card-title {
+    font-size: 1rem;
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+h5 {
+    font-size: 1rem;
+    padding: 0.5rem;
+}
+
+.announcements p {    
+    font-size: 0.9rem;
+}
+
+.card {
+    box-shadow: var(--shadow);
+    padding: 2rem;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+}
+
+.trend {
+    display: flex;
+    align-items: center;
+}
+
+.trend p {
+    font-size: 0.8rem;
+}
+
+ .account .name {
+    font-size: 0.7rem;
 }
